fix 组件事件优化-width-stretch、height-stretch样式兼容非中划线 (#259)

--- a/src/col/index.less
+++ b/src/col/index.less
@@ -25,13 +25,19 @@
 }
 /* 与主轴同向用 flex，否则用 align-self */
 .van-col--direction-horizontal > [width-stretch="true"],
-.van-col--direction-vertical > [height-stretch="true"] { flex: 1 0 0; }
+.van-col--direction-horizontal > [widthstretch="true"],
+.van-col--direction-vertical > [height-stretch="true"],
+.van-col--direction-vertical > [heightstretch="true"] { flex: 1 0 0; }
 .van-col--direction-vertical > [width-stretch="true"],
-.van-col--direction-horizontal > [height-stretch="true"] { align-self: stretch; }
+.van-col--direction-vertical > [widthstretch="true"],
+.van-col--direction-horizontal > [height-stretch="true"],
+.van-col--direction-horizontal > [heightstretch="true"] { align-self: stretch; }
 /* width-stretch 强制 width 为 unset */
-.van-col--flex > [width-stretch="true"] { width: unset !important; }
+.van-col--flex > [width-stretch="true"],
+.van-col--flex > [widthstretch="true"] { width: unset !important; }
 /* height-stretch 强制 height 为 unset */
-.van-col--flex > [height-stretch="true"] { height: unset !important; }
+.van-col--flex > [height-stretch="true"],
+.van-col--flex > [heightstretch="true"] { height: unset !important; }
 .van-col {
   &--flex {
     display: flex;
